--- a/langui-paper/src/main/resources/lang/zh_TW.yml
+++ b/langui-paper/src/main/resources/lang/zh_TW.yml
@@ -2,6 +2,6 @@ menu:
   select-language: "選擇語言"
   close: "關閉"
 info:
-  changed-language: "將語言更改成英文！"
+  changed-language: "語言已更改為繁體中文(台灣)！"
 
 config-version: 1.0
