--- a/langui-paper/src/main/resources/lang/zh_CN.yml
+++ b/langui-paper/src/main/resources/lang/zh_CN.yml
@@ -2,6 +2,6 @@ menu:
   select-language: "选择语言"
   close: "关闭"
 info:
-  changed-language: "语言改为英语！"
+  changed-language: "语言已改为简体中文！"
 
 config-version: 1.0
